# game-creation-tool

./: .gitignore  Cargo.toml  LICENSE  PARKING.md  README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: app_service.rs  command_gateway.rs  editor_runtime.rs  editor_service.rs  editor_session.rs  invoke_api.rs  invoke_api_animation.rs  invoke_api_entities.rs  main.rs  (+9 more)
crates/gcs-wasm/: Cargo.toml
crates/gcs-wasm/src/: lib.rs
v2/: AGENT_GUIDE.md  AGENT_STATE.md  Cargo.toml  README.md  TASK_TEMPLATE.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
v2/.github/: PULL_REQUEST_TEMPLATE.md
v2/.github/workflows/: ci.yml
v2/docs/: DOCUMENTATION_INDEX.md  MIGRATION.md
v2/docs/adrs/: ADR-V2-001-rust-wasm-core.md  ADR-V2-002-typescript-frontend.md  ADR-V2-003-rhai-phased.md
v2/docs/architecture/: V2 Capability Matrix.md  V2 Determinism Spec.md  V2 System Architecture.md
v2/docs/assets/: V2 Asset Pipeline Contract.md
v2/docs/contracts/: CANONICAL_SERIALIZATION.md  PARITY_FIXTURE_MATRIX.md  SCHEMA_GUIDELINES.md  SCHEMA_VERSIONING.md  SEMANTIC_VALIDATION_RULES.md  V2 Compatibility Policy.md
v2/docs/design/: V2 2D-in-3D Workflow Spec.md  V2 Dashboard UX Spec.md  V2 Diagnostics and Tasks Contract.md  V2 Error Recovery UX.md  V2 Onboarding Spec.md  V2 Product UX Spec.md  V2 Professional UX Bar.md  V2 Smart Tooling Spec.md  V2 UI Blueprint.md  V2 Visual System Tokens.md  V2 Visual System.md
v2/docs/governance/: AI Authoring Hygiene Policy.md  Documentation Drift Policy.md
v2/docs/manual/: Behavior Specs.md  How-To Guides.md  Quickstart.md  Reference.md
v2/docs/performance/: V2 Performance Budget.md
v2/docs/production/: V2 Production Plan.md
v2/docs/qa/: README.md
v2/docs/release/: V2 Release Channel Strategy.md
v2/docs/roadmap/: V2 Rebuild Plan.md
v2/docs/runbooks/: GitHub Workflow (Solo).md  Legacy Audit Checklist.md  Legacy Audit Report.md  Legacy Salvage High-ROI Plan.md  Manual QA Checklist.md  PR Governance Checklist.md  Parity Gate Criteria.md  V2 Audit Report 2026-02-23.md
v2/docs/security/: V2 Scripting Sandbox Policy.md
v2/docs/status/: V2 Status Snapshot.md
v2/scripts/: check-ascii.mjs  serve-packages.mjs  status.mjs
(+238 files in other folders)
