[workspace]
members = [
  "crates/project-core",
  "crates/command-core",
  "crates/engine-core",
  "crates/export-core",
  "crates/script-core",
  "crates/gcs-wasm",
  "apps/desktop/src-tauri"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Game Creator Studio Team"]

[workspace.dependencies]
anyhow = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
