[workspace]
members = [
  "packages/core/math",
  "packages/core/collision",
  "packages/core/physics",
  "packages/core/simulation",
  "packages/core/animation",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Game Creator Studio Team"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
glam = { version = "0.29", features = ["serde"] }
wasm-bindgen = "0.2"
